Commit création et modification UserAccount

--- a/Kili/Views/Login/Authentification.cshtml
+++ b/Kili/Views/Login/Authentification.cshtml
@@ -10,7 +10,9 @@
         Vous êtes déjà authentifié avec le login :
         @Model.UserAccount.UserName
     </h3>
-    @Html.ActionLink("Voulez-vous vous déconnecter ?", "Deconnexion")
+    @Html.ActionLink("Se déconnecter", "Deconnexion")
+    <br/>
+    @Html.ActionLink("Mon profil", "ModifierUserAccount", "UserAccount",new { id = Model.UserAccount.Id })
 }
 else
 {
