--- a/Kili/Views/Shared/_Layout.cshtml
+++ b/Kili/Views/Shared/_Layout.cshtml
@@ -4,8 +4,16 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="~/css/SiteGeneral.css" rel="stylesheet" />
 </head>
 <body>
+    <div id="menu">
+            <ul>
+                <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
+                <li>@Html.ActionLink("Accéder à son compte", "Authentification", "Login")</li>
+                <li>@Html.ActionLink("Créer son compte", "CreerUserAccount", "UserAccount")</li>
+            </ul>
+        </div><br />
     <div>
         @RenderBody()
     </div>
