--- a/Kili/Views/UserAccount/ModifierUserAccount.cshtml
+++ b/Kili/Views/UserAccount/ModifierUserAccount.cshtml
@@ -24,6 +24,9 @@
             @Html.HiddenFor(m=>Model.UserAccount.Id)
             <input type="submit" value="Modifier" />
         </fieldset>
+
+        <br/>
+    @Html.ActionLink("Supprimer mon profil", "SupprimerUserAccount", "UserAccount", new { id = Model.UserAccount.Id })
     }
 
     <script type="text/javascript" src="~/Scripts/jquery-3.3.1.js"></script>
