First commit de mercredi

--- a/Kili/Views/Cata/Index.cshtml
+++ b/Kili/Views/Cata/Index.cshtml
@@ -21,5 +21,9 @@
 </table>
 <ul>
     <li>@Html.ActionLink("Créer votre catalogue de produits", "CreerCatalogue", "Cata")</li>
-    <li>@Html.ActionLink("Modifier le contenu du catalogue", "ModifierCatalogue", "Cata")</li>
+    <li>@Html.ActionLink("Modifier le contenu du catalogue", "ModifierCatalogue", "Cata")</li><br />
+    <li>@Html.ActionLink("Revenir à l'accueil", "Index", "Home")</li>
+       
+
+
 </ul>
